<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/decks_header">
        <EditTextPreference
            app:key="max_number_cards"
            app:title="@string/max_number_cards"
            app:defaultValue="20" />

        <SwitchPreferenceCompat
            app:key="board"
            app:defaultValue="false"
            app:summaryOff="@string/board_summary_off"
            app:summaryOn="@string/board_summary_on"
            app:title="@string/board_title" />

        <SwitchPreferenceCompat
            app:key="sort_by_easiness_or_repetitions"
            app:defaultValue="false"
            app:summaryOff="repetitions(actualization after restart)"
            app:summaryOn="easiness(actualization after restart)"
            app:title="sort by repetition or easiness"/>
    </PreferenceCategory>
</PreferenceScreen>
