<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.CardEditFragment">

    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.cards.Card" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{card.date}"
            android:textSize="20sp"
            tools:text="@{card.date.substring(0,10)}"/>

        <TextView
            android:id="@+id/text_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_text_view"
            android:text="@string/edit_question_text"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:layout_marginVertical="5dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_question_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_question"
            android:hint="@string/edit_question_title"
            android:layout_marginHorizontal="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question_edit_text"
                android:text="@{card.question}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_question_yes"
            android:text="@string/edit_answer_text"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:layout_marginVertical="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_answer_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_answer"
            android:hint="@string/edit_answer_title"
            android:layout_marginHorizontal="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer_edit_text"
                android:text="@{card.answer}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/card_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/edit_text_answer_yes"
            android:gravity="center">

            <Button
                android:id="@+id/accept_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:text="@string/accept_card_edit_button_title" />
            <Button
                android:id="@+id/cancel_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:text="@string/cancel_card_edit_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_edit_buttons"
                android:layout_centerHorizontal="true"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/delete_button"/>
    </RelativeLayout>
</layout>
