<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="es.uam.eps.dadm.cards.StudyViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.card == null ? View.INVISIBLE : View.VISIBLE}">

        <es.uam.eps.dadm.cards.BoardView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:chipIcon="@drawable/ic_baseline_assessment_24"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@{@string/due_cards_format(viewModel.nDueCards)}"
            tools:text="@string/info_text_view_message"/>

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@{viewModel.card.question}"
            android:textSize="20sp"
            tools:text="Question text" />

        <View
            android:id="@+id/separator_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/question_text_view"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@android:color/darker_gray"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator_view"
            android:layout_centerInParent="true"
            android:text="@{viewModel.card.answer}"
            android:textSize="20sp"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            tools:text="Answer text" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_text_view"
            android:text="@string/answer_button_text"
            android:visibility="@{viewModel.card.answered ? View.INVISIBLE : View.VISIBLE}" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/difficulty_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            app:singleSelection="true">

            <Button
                android:id="@+id/hard_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/difficult_button_title"/>

            <Button
                android:id="@+id/doubt_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/doubt_button_title"/>

            <Button
                android:id="@+id/easy_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/easy_button_title"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>
</layout>